# StockPortfolioTracker

./: .gitignore  Dockerfile  config.ini.dist  docker-compose.yml  main.py  notes.md  output.csv  pyproject.toml  readme.md  ret.json  test_rethink.py  test_yfinance.py  transactions_example.csv
portfoliotracker/api/: server.py  uvicorn.py
portfoliotracker/api/routers/: history_router.py  master_router.py  portfolio_router.py  transaction_router.py
portfoliotracker/handlers/: db_handler.py  history_handler.py  portfolio_handler.py  transaction_handler.py
portfoliotracker/utils/: log_handling.py  parameters.py  utils.py
